chore: Agrega mas datos a la BD [Marcos]